objects/Fraud_Result_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Fraud_Check_Address_Indicator__c</fullName>
        <label>Fraud Check Address Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Drivers_Licence_Indicator__c</fullName>
        <label>Fraud Check Drivers Licence Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Employer_Indicator__c</fullName>
        <label>Fraud Check Employer Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Employer_Phone_Indicator__c</fullName>
        <label>Fraud Check Employer Phone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Guarantor_Phone_Indicator__c</fullName>
        <label>Fraud Check Guarantor Phone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Passport_Indicator__c</fullName>
        <label>Fraud Check Passport Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Phone_Indicator__c</fullName>
        <label>Fraud Check Phone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Referee_Phone_Indicator__c</fullName>
        <label>Fraud Check Referee Phone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Check Result</label>
        <referenceTo>Fraud_Check_Result__c</referenceTo>
        <relationshipLabel>Fraud Result Summarys</relationshipLabel>
        <relationshipName>Fraud_Result_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fraudCheck_Second_Phone_Indicator__c</fullName>
        <label>fraudCheck Second Phone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fraud Result Summary</label>
    <nameField>
        <label>Fraud Result Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fraud Result Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>